Fix Product card on firefox

--- a/src/components/QuoteProducts/styles.scss
+++ b/src/components/QuoteProducts/styles.scss
@@ -73,5 +73,9 @@
     .swiper-slide-shadow {
         border-radius: 18px;
     }
+    
+    .swiper-3d .swiper-wrapper {
+        -moz-transform-style: unset;
+    }
 
 }
